# PersonalServer

./: .gitignore  CMakeLists.txt  LICENSE  ReadMe.md
docker/: docker-compose-example.yml  docker-compose.yml
modules/: CMakeLists.txt
modules/PersonalServer/: CMakeLists.txt
modules/PersonalServer/src/: main.cpp
modules/TestServer/: CMakeLists.txt
modules/TestServer/src/: main.cpp
scripts/: PersonalServerDeploy.sh
